@@ -17,12 +17,12 @@ binary-modules: kdist_config
 	dh_testroot
 	dh_clean -k
 	dh_installdirs lib/modules/$(KVERS)/misc
-        
+
 	# build and install the module
-	$(MAKE) KPKG_EXTRAV_ARG=$(KPKG_EXTRAV_ARG) KSRC=$(KSRC) \
-	KBUILD=$(KSRC) KVER=$(KVERS) \
-	DIST_DESTDIR=debian/ndiswrapper-modules-$(KVERS)/lib/modules/$(KVERS)/misc/ install
-        
+	$(MAKE) -C $(CURDIR) install \
+	KSRC=$(KSRC) KBUILD=$(KSRC) KVER=$(KVERS) \
+	DIST_DESTDIR=debian/ndiswrapper-modules-$(KVERS)/lib/modules/$(KVERS)/misc/
+
 	dh_installdocs 
 	dh_installchangelogs
 	dh_installmodules
